# Dualboot-task-manager

./: Dockerfile  docker-compose.yml  pyproject.toml
task_manager/: settings.py
